# AI_Educator

./: .gitignore  DEPLOY.md  README.md  check.sh  dev.sh  run.sh  setup.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 275215b989f5_course_level.py  71ba8657a2bf_baseline.py  a1c4e7f20b31_course_category.py  b2d5f8a13c42_document_files.py  c3e6a9b47d51_enrollments.py  d4f7b1c8e2a3_auth_accounts.py
backend/app/: auth.py  config.py  db.py  jobs.py  main.py  maintenance.py  manage.py  models.py  schemas.py
backend/app/api/: auth.py  courses.py  deps.py  diagnostic.py  documents.py  learn.py  llm.py  profiles.py  settings.py  stats.py  tasks.py  topics.py
backend/app/content/: checking.py  latex_repair.py  llm_content.py  loader.py  serving.py  worked_examples.py
backend/app/content/generators/: __init__.py  algebra.py  arithmetic.py  (+10 more)
backend/app/engine/: diagnostic.py  graph.py  mastery.py  scheduler.py  srs.py  xp.py
backend/app/ingest/: derive.py  extract.py  generate.py  pipeline.py  readings.py  segment.py
backend/app/llm/: anthropic_provider.py  base.py  cache.py  ollama.py  router.py
backend/scripts/: export_course_map.py  export_latex.py
backend/tests/: conftest.py  test_api_learn.py  test_auth.py  test_checking.py  test_diagnostic.py  test_enrollment.py  test_generators.py  test_graph.py  test_ingest.py  test_latex_repair.py  test_llm.py  test_loader.py  test_maintenance.py  test_manage.py  test_mastery.py  test_profiles.py  test_readings.py  test_scheduler.py  test_worked_examples.py
(+43 files in other folders)
