[project]
name = "educator"
version = "0.1.0"
description = "Local adaptive math learning app (Math Academy style)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "pydantic>=2",
    "pydantic-settings",
    "sympy",
    "pymupdf",
    "fsrs>=6",
    "anthropic",
    "httpx",
    "pyyaml",
    "python-multipart",
    "alembic",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "ollama: live tests against local Ollama (deselected by default)",
    "anthropic: live tests against the Anthropic API (deselected by default)",
]
addopts = "-m 'not ollama and not anthropic'"
